Fix scrollbar issue of overlay controller

--- a/client/src/styles/components/_map.scss
+++ b/client/src/styles/components/_map.scss
@@ -82,6 +82,7 @@
     @media screen and (max-width: $size-max-mobile) {
       max-width: 16rem;
       max-height: 22rem;
+      overflow-y: auto;
     }
   }
   & .leaflet-control-layers-list.leaflet-control-layers-scrollbar {
